# interloper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  cr.yaml  dockerfile  docs.dockerfile  index.html  index.yaml  interloper.yaml  mkdocs.yml  pyproject.toml  zensical.toml
.claude/: settings.json
.claude/commands/: build-app.md  check-py.md  check.md
.claude/skills/verify/: SKILL.md
.github/workflows/: _checks.yaml  _release.yaml  check_release.yaml  checks.yaml  docs.yaml  lint_pr.yaml  publish.yaml  release.yaml
blog/: index.html
blog/2023/10/11/my-first-blog-post/: index.html
blog/archive/2023/: index.html
blog/category/meta/: index.html
chart/interloper/: Chart.yaml  README.md  values.yaml
chart/interloper/ci/: test-values.yaml
chart/interloper/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  configmap.yaml  db-init-job.yaml  frontend-deployment.yaml  httproute.yaml  ingress.yaml  postgresql.yaml  rbac.yaml  scheduler-deployment.yaml  secret.yaml  worker-deployment.yaml
dev/: docker-compose.yml  interloper.yaml  seed.py
docker/: docs.nginx.conf  frontend.nginx.conf.template  uv-sync.sh
docs/: faq.md  getting-started.md  index.md  tutorial.md
docs/features/: assets-sources.md  backfilling.md  basic.md  catalog.md  cli.md  config.md  connections.md  data-validation.md  destinations.md  events.md  hooks.md  io.md  oauth.md  partitioning.md  resources.md  rest.md  runners.md  schema.md  upstream-assets.md
docs/stylesheets/: extra.css
examples/: adservice.py  asset.py  backfill_multi_runs.py  backfill_single_run.py  basic_functional.py  basic_oop.py  catalog.py  functional.py  io_multi.py  job.yaml  manifest.yaml  oop.py  open_meteo.py  partitioning.py  source.py  upstream_asset.py  viz.py
examples/assets/: adservice.py  adup.py  amazon_ads.py  amazon_selling_partner.py  awin.py  bing_ads.py  campaign_manager_360.py  clockify.py  criteo.py  demo.py  display_video_360.py  easybill.py  facebook_ads.py  open_meteo.py
examples/backfill/: multi_runs.py  single_run.py
examples/basic/: functional.py  oop.py
examples/benchmarks/: tiktok_pagination.py
examples/cli/: config.yaml  script.py
examples/io/: io_multi.py  multi_asset_types.py  multi_io.py
examples/partitioning/: partitioning.py
examples/runner/: async_.py  docker_.py  k8s.py  multi_process.py  multi_thread.py  serial.py
examples/telemetry/: requirements.txt  span_exporter.py
examples/telemetry/opentelemetry-collector/: docker-compose.yaml
examples/telemetry/opentelemetry-collector/grafana/provisioning/datasources/: datasource.yaml
examples/telemetry/opentelemetry-collector/opentelemetry/: config.yaml
examples/telemetry/opentelemetry-collector/prometheus/: config.yaml
examples/telemetry/opentelemetry-collector/tempo/: config.yaml
examples/ui/: viz.py
examples/upstream_assets/: upstream_asset.py
faq/: index.html
features/backfilling/: index.html
features/basic/: index.html
features/data-validation/: index.html
features/io/: index.html
features/partitioning/: index.html
features/schema/: index.html
features/upstream-assets/: index.html
getting-started/: index.html
home/: index.html
search/: search_index.json
src/dead/: asset.py  io.py  main.py  pipeline.py  sentinel.py  source.py
tests/functional/bigquery/: test_materialization_strategy.py  test_partitioning.py
tutorial/: index.html
