# ###############
# PROJECT
# ###############
[project]
name = "interloper-workspace"
version = "0.30.0"
description = "The Interloper Project"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "interloper-agent",
    "interloper-api",
    "interloper-app",
    "interloper-assets",
    "interloper-core",
    "interloper-db",
    "interloper-docker",
    "interloper-google-cloud",
    "interloper-k8s",
    "interloper-pandas",
    "interloper-scheduler",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.1",
    "python-semantic-release>=10.0.0",
    "ruff>=0.9.4",
    "ty>=0.0.46",
    "zensical>=0.0.24",
]

# ###############
# UV
# ###############
[tool.uv.sources]
interloper-core = { workspace = true }
interloper-assets = { workspace = true }
interloper-pandas = { workspace = true }
interloper-docker = { workspace = true }
interloper-k8s = { workspace = true }
interloper-db = { workspace = true }
interloper-api = { workspace = true }
interloper-scheduler = { workspace = true }
interloper-google-cloud = { workspace = true }
interloper-agent = { workspace = true }
interloper-app = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

# ###############
# TY
# ###############
[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
# Scope to the workspace packages (their src/ + tests/).
include = ["packages"]

[tool.ty.rules]
invalid-method-override = "ignore"
unused-type-ignore-comment = "ignore"

[tool.ty.analysis]
# Optional vendor SDKs ship no type information and are only pulled in via
# extras; their imports are guarded and assigned to `Any`-typed properties.
# Treat them as `Any` instead of unresolved rather than disabling the rule globally.
replace-imports-with-any = ["bingads.**", "googleapiclient.**", "google.ads.**"]

[[tool.ty.overrides]]
# Schema and Normalizer intentionally shadow the `id` identity attribute
# inherited from Component as a ClassVar — they are pure structural/config
# components, not runtime instances that need identity. Schema subclasses
# additionally redeclare `id`/`name` as typed data columns. The runtime handles
# this shadow deliberately (see schema/base.py, normalizer/base.py). Scope the
# override here so the rule still guards genuine incompatible attribute
# overrides elsewhere.
include = [
    "**/schemas/**",
    "packages/interloper-core/src/interloper/schema/base.py",
    "packages/interloper-core/src/interloper/normalizer/base.py",
    "**/tests/**",
]

[tool.ty.overrides.rules]
invalid-attribute-override = "ignore"

# ###############
# RUFF
# ###############
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "I", "UP", "ANN001", "ANN201", "ANN202"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**" = ["ANN", "D102"]

# ###############
# PYTEST
# ###############
[tool.pytest.ini_options]
markers = ["integration", "functional"]
addopts = ["--import-mode=importlib", "-m not functional"]
filterwarnings = ["ignore::FutureWarning:google.api_core"]
asyncio_mode = "auto"

# ###############
# COVERAGE
# ###############
[tool.coverage.report]
include = ["packages/**/src/**"]
exclude_also = [
    # Don't complain about missing debug-only code:
    # "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

# ################
# SEMANTIC RELEASE
# ################
[tool.semantic_release]
allow_zero_version = true
# Stay on 0.x: a breaking change bumps the minor (0.2.0 → 0.3.0) instead of
# graduating to 1.0.0. Flip to true (the default) when ready to commit to 1.0.
major_on_zero = false
# Runs between version stamping and the release commit. The package build
# itself happens in the workflow's publish step; this only refreshes uv.lock
# so the locked workspace versions match the ones just stamped — `assets`
# then folds the regenerated lock into the release commit. The PSR GitHub
# action runs in its own docker container without uv, hence the pip bootstrap.
build_command = "python -m pip install uv && uv lock"
assets = ["uv.lock"]
commit_message = "chore(release): {version} [skip ci]"
version_toml = [
    "pyproject.toml:project.version",
    "packages/interloper-core/pyproject.toml:project.version",
    "packages/interloper-assets/pyproject.toml:project.version",
    "packages/interloper-pandas/pyproject.toml:project.version",
    "packages/interloper-db/pyproject.toml:project.version",
    "packages/interloper-google-cloud/pyproject.toml:project.version",
    "packages/interloper-docker/pyproject.toml:project.version",
    "packages/interloper-k8s/pyproject.toml:project.version",
    "packages/interloper-scheduler/pyproject.toml:project.version",
    "packages/interloper-api/pyproject.toml:project.version",
    "packages/interloper-agent/pyproject.toml:project.version",
    "packages/interloper-app/pyproject.toml:project.version",
]
# Keep the Helm chart in lockstep with the Python version. `version` (chart
# SemVer) and `appVersion` (the image tag the chart deploys) both track the
# released version. Note the case difference saves the `version` pattern from
# also matching `appVersion`.
version_variables = [
    "chart/interloper/Chart.yaml:version",
    "chart/interloper/Chart.yaml:appVersion",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
